Functions and control flow in js.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PeachClock <3 </title>
-    <script src="Scripts/scratch2.js"></script>
+    <title>PeachClock (3 </title>
+    <script src="Scripts/functions.js"></script>
 </head>
 <body>
     <h1>This is where clock will pop-up !!!!</h1>
