Context in Javascript.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>PeachClock (3 </title>
-    <script src="Scripts/functions.js"></script>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>PeachClock (3</title>
+    <!-- <script src="Scripts/functions.js"></script> -->
+    <script src="Scripts/context.js"></script>
+  </head>
+  <body>
     <h1>This is where clock will pop-up !!!!</h1>
-</body>
+  </body>
 </html>
