Click event listner in Js.

--- a/box-fondlingWithJs.html
+++ b/box-fondlingWithJs.html
@@ -5,18 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fondling Js <3</title>
     <link rel="stylesheet" href="./Stylesheets/style.css" />
-    <script src="Scripts/DOM.js"></script>
   </head>
   <body>
-    <!-- <div class="matrix"> -->
-    <!-- <div class="boxes"> -->
-    <div class="box">1</div>
-    <div class="box">2</div>
-    <!-- </div> -->
-    <!-- <div class="boxes">
-        <div class="box">1</div>
-        <div class="box">2</div>
-      </div> -->
-    <!-- </div> -->
+    <div class="matrix">
+      <div class="boxes">
+        <div class="box">11</div>
+        <div class="box">12</div>
+      </div>
+      <div class="boxes">
+        <button type="button" class="color-shift-button">Shift Colors</button>
+      </div>
+      <div class="boxes">
+        <div class="box">21</div>
+        <div class="box">22</div>
+      </div>
+    </div>
+    <script src="./Scripts/!!-EventListener-click.js"></script>
   </body>
 </html>
