Event handling with change listener.

--- a/box-fondlingWithJs.html
+++ b/box-fondlingWithJs.html
@@ -29,5 +29,6 @@
 
     <script src="./Scripts/!!-EventListener-click.js"></script>
     <script src="./Scripts/!!-EventListener-keyup.js"></script>
+    <script src="./Scripts/!!-EventListener-change.js"></script>
   </body>
 </html>
