--- a/index.html
+++ b/index.html
@@ -2,11 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>PeachClock (3</title>
-    <!-- <script src="Scripts/functions.js"></script> -->
-    <script src="Scripts/context.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fondling Js <3</title>
+    <link rel="stylesheet" href="./Stylesheets/style.css" />
+    <link rel="icon" href="Resources/icon.jpeg" type="img/x-icon" />
   </head>
   <body>
-    <h1>This is where clock will pop-up !!!!</h1>
+    <div class="matrix">
+      <div class="boxes">
+        <div class="box"><p class="copyhere">11</p></div>
+        <div class="box"><p class="copyhere">21</p></div>
+      </div>
+
+      <div class="boxes">
+        <button class="color-shift-button">Color Shift</button>
+        <textarea
+          class="textbox copyfrom"
+          placeholder="Drop Something plox?"
+        ></textarea>
+      </div>
+
+      <div class="boxes">
+        <div class="box"><p class="copyhere">12</p></div>
+        <div class="box"><p class="copyhere">22</p></div>
+      </div>
+    </div>
+
+    <script src="./Scripts/!!-EventListener-click.js"></script>
+    <script src="./Scripts/!!-EventListener-keyup.js"></script>
+    <script src="./Scripts/!!-EventListener-change.js"></script>
   </body>
 </html>
