--- a/index.html
+++ b/index.html
@@ -2,34 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fondling Js <3</title>
+    <title>CodePen - orange clock</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Bangers"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./Stylesheets/style.css" />
-    <link rel="icon" href="Resources/icon.jpeg" type="img/x-icon" />
   </head>
   <body>
     <div class="matrix">
-      <div class="boxes">
-        <div class="box"><p class="copyhere">11</p></div>
-        <div class="box"><p class="copyhere">21</p></div>
+      <div class="clock">
+        <div class="middle"></div>
+        <div class="middle1"></div>
+        <!-- <div id="hour" class="hour"></div> -->
+        <!-- <div id="minute" class="minute"></div> -->
+        <div id="second" class="second"></div>
       </div>
 
-      <div class="boxes">
-        <button class="color-shift-button">Color Shift</button>
-        <textarea
-          class="textbox copyfrom"
-          placeholder="Drop Something plox?"
-        ></textarea>
-      </div>
-
-      <div class="boxes">
-        <div class="box"><p class="copyhere">12</p></div>
-        <div class="box"><p class="copyhere">22</p></div>
+      <div class="boxes-r">
+        <div class="boxes-dd">
+          <div class="box box-dd"><p class="timestamp">~20 DAYS~</p></div>
+        </div>
+        <div class="boxes-tt">
+          <div class="box box-hh"><p class="timestamp">11 :</p></div>
+          <div class="box box-mm"><p class="timestamp">59 :</p></div>
+          <div class="box box-ss"><p class="timestamp">59</p></div>
+        </div>
       </div>
     </div>
-
-    <script src="./Scripts/!!-EventListener-click.js"></script>
-    <script src="./Scripts/!!-EventListener-keyup.js"></script>
-    <script src="./Scripts/!!-EventListener-change.js"></script>
+    <!-- partial -->
+    <script src="./Scripts/script.js"></script>
   </body>
 </html>
