Added taskbar logo.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
 
     <link rel="stylesheet" href="./Stylesheets/style.css" />
+    <link rel="icon" href="Resources/icon.jpeg" type="img/x-icon" />
   </head>
   <body>
     <div class="matrix">
