Added event functionality.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div class="boxes-r">
         <div class="boxes-dd">
           <div class="box box-dd"><p class="timestamp">~20 DAYS~</p></div>
+          <div class="box box-dd"><p class="event">to B'day 🎉</p></div>
         </div>
         <div class="boxes-tt">
           <div class="box box-hh"><p class="timestamp">11 :</p></div>
